Display show banner and Fanart background (#424)
* clickable icon to open shows page on http://www.fanart.tv (#1512)

* Display banner on DisplayShow page. (#1518)

* Display banner on DisplayShow page.

* Removed width:100% to align text with text on the left side of the summary box. symetrical look == good imo.

* Fanart background in displayShow (#1531)

* DisplayShow background (#1524)

some changes in CSS files (dark.css & style.css).
set opacity to 0.8 on summary and displayShowTable.display_show classes
only did changes to dark skin now. once we land on something i can do the same changes to the light.css file.

one new file backstretch.js in js/
this is the one called backstretch.min.js from the source of that project.

5 line block added in DisplayShow.mako to load backstretch.js and set background to fanart.
if no background exists for a show in cache folder the background will be like before.

* Add backstretch to bower, and minify into vender.min.js
Add dependancies for testing to fix the travis build

* Move backstretch call to core.js

* Add option to be able to disable fanart in the background of displayShow, in /config/general/ on the interface tab

* Add gui option (/config/general on Interface tab) to adjust opacity of fanart backround in displayShow

# Conflicts:
#	gui/slick/js/core.min.js
#	gui/slick/js/vender.min.js
#	sickbeard/__init__.py
#	sickbeard/webserve.py

* Fixed some merge conflicts. All credits go to wimpyrbx.
* Updated vendor after merge
* Removed the core.min.js as that got added through one of the merged commits. And we don't use that anymore.

* Moved css out of mako into style.css.

* Rebrand bower.json
* Removed qunit as it's not used

* Update FanArt PR

* rebase to current development
* remove css changes from dark.css
* create custom fanart CSS classes in style.css
* use conditionals in displayShow.mako to change CSS classes called

* Remove sneaky tab

Tab from manual me

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -1134,7 +1134,7 @@ span.snatched b {
 }
 
 .displayShowTable.display_show {
-    clear:both
+    clear:both;
 }
 
 .displayShowTable th.row-seasonheader {
@@ -1147,6 +1147,43 @@ span.snatched b {
 
 .displayShowTable td.col-search {
     text-align: center;
+}
+
+
+.displayShowTableFanArt {
+    table-layout: auto;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    text-align: center;
+    border: none;
+    empty-cells: show;
+    color: #000 !important;
+}
+
+.displayShowTableFanArt.display_show {
+    clear:both;
+    opacity: 0.8;
+}
+
+.displayShowTableFanArt th.row-seasonheader {
+    border: none !important;
+    background-color: transparent !important;
+    color: #fff !important;
+    padding-top: 15px !important;
+    text-align: left !important;
+}
+
+.displayShowTableFanArt td.col-search {
+    text-align: center;
+}
+
+.summaryFanArt {
+   opacity: 0.8 !important; 
+}
+
+.tablesorterFanArt {
+    background-color: transparent !important;
 }
 
 .sickbeardTable {
@@ -1302,6 +1339,23 @@ td.col-group {
 
 div.season-scene-exception {
     display: inline;
+}
+
+#showBanner {
+    float:right;
+    height:50px;
+    border:1px solid black; 
+}
+
+.fanart {
+    margin-top: -1px; 
+    vertical-align:middle;
+}
+
+.showOptions {
+    width:180px;
+    float: right;
+    vertical-align: middle;
 }
 
 /* =======================================================================
