--- a/gui/slick/css/light.css
+++ b/gui/slick/css/light.css
@@ -66,10 +66,14 @@ displayShow.mako
 
 .displayShowTableFanArt th.row-seasonheader {
 	border: none !important;
-	background-color: #fff !important;
-	color: #000 !important;
+	background-color: transparent !important;
+	color: rgb(0, 0, 0) !important;
 	padding-top: 15px !important;
 	text-align: left !important;
+}
+
+.snatchTitle {
+    color: rgb(0, 0, 0) !important;
 }
 
 /* =======================================================================
